# NLP-Fakenews

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: gossipcop_main_experiment_report.md  gossipcop_robustness_explainability_report.md
model/: __init__.py  analyze_explainability.py  analyze_matched_eval.py  analyze_size_buckets.py  check_device.py  data.py  device.py  evaluate_robustness.py  inspect_data.py  metrics.py  models.py  run_ablations.py  train.py  train_size_control.py
outputs/ablations/: final_analysis.md  summary.csv  summary.json  summary_by_experiment.csv  summary_by_experiment.json
outputs/ablations_pooling_splits/: final_analysis.md  summary.csv  summary.json  summary_by_experiment.csv  summary_by_experiment.json  test_matched_summary.csv  test_matched_summary.json  test_matched_summary_by_experiment.csv  test_matched_summary_by_experiment.json  test_size_bucket_summary.csv  test_size_bucket_summary.json  test_size_bucket_summary_by_experiment.csv  test_size_bucket_summary_by_experiment.json
outputs/ablations_pooling_splits/matched_caliper_0_25/: test_matched_summary.csv  test_matched_summary.json  test_matched_summary_by_experiment.csv  test_matched_summary_by_experiment.json
outputs/robustness_gossipcop/: explainability_summary.csv  explainability_summary.json  explainability_summary_by_experiment.csv  explainability_summary_by_experiment.json  test_robustness_summary.csv  test_robustness_summary.json  test_robustness_summary_by_experiment.csv  test_robustness_summary_by_experiment.json
(+320 files in other folders)
