[project]
name = "fakenes-detect"
version = "0.1.0"
description = "Multi-modal heterogeneous fake news detection experiments on FakeNewsNet-derived graph data."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "torch>=2.6",
    "transformers>=4.48",
    "timm>=1.0",
    "open-clip-torch>=2.29",
    "pillow>=11.0",
    "matplotlib>=3.9",
    "tensorboard>=2.18",
    "tqdm>=4.67",
    "networkx>=3.4",
]

[project.scripts]
fakenews-train = "model.train:main"
fakenews-inspect = "model.inspect_data:main"
fakenews-ablations = "model.run_ablations:main"
fakenews-size-control = "model.train_size_control:main"
fakenews-check-device = "model.check_device:main"
fakenews-size-buckets = "model.analyze_size_buckets:main"
fakenews-matched-eval = "model.analyze_matched_eval:main"
fakenews-robustness = "model.evaluate_robustness:main"
fakenews-explainability = "model.analyze_explainability:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["model*"]

[project.optional-dependencies]
gnn = [
    "torch-geometric>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
